A few more pointers

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
     </p>
     <h4>WikiPathways SPARQL endpoint</h4>
     <p>The WikiPathways SPARQL endpoint is also unreachable. We currently do not have an alternative,
-    but one option is to load the RDF data and load this in a local Virtuoso or Blazegraph installation.</a>.
+    but one option is to <a href="http://data.wikipathways.org/20191210/rdf/">download the RDF data</a>
+    and load this in a local Virtuoso or Blazegraph installation.</a>.
+    </p>
+    <h4>BridgeDb webservice</h4>
+    <p>The BridgeDb webservices are online and can be used. However, the Swagger/OpenAPI interactive
+    documentation is not available.</a>.
     </p>
     <h4>BridgeDb.org website</h4>
     <p>The BridgeDb website unreachable. Along with the data.bridgedb.org website hosting the BridgeDb identifier
