--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     archived version of a recent mapping file</a>.
     </p>
     <h4>WikiPathways SPARQL endpoint</h4>
-    <p>The WikiPathways SPARQL endpoint is also unreachable. We currently do not have an alternative,
+    <p>The WikiPathways SPARQL endpoint is also unreachable (<a href="https://www.wikipathways.org/">WikiPathways.org</a> is not affected). We currently do not have an alternative,
     but one option is to <a href="http://data.wikipathways.org/20191210/rdf/">download the RDF data</a>
     and load this in a local Virtuoso or Blazegraph installation.</a>.
     </p>
