--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <b>More info</b><br />
     Twitter:<br />
     <a href="https://twitter.com/bigcat_um">@bigcat_UM</a> <br />
-    <a href="https://twitter.com/BridegDb">@BridegDb</a> <br />
+    <a href="https://twitter.com/BridgeDb">@BridgeDb</a> <br />
     <a href="https://twitter.com/PathVisio">@PathVisio</a> <br />
     <a href="https://twitter.com/WikiPathways">@WikiPathways</a> <br />
   </div>
