--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
     mapping databases. For metabolites, Zenodo has <a href="https://figshare.com/articles/Metabolite_BridgeDb_ID_Mapping_Database_20191025_/10048508">an
     archived version of a recent mapping file</a>.
     </p>
+    <h4>ArrayAnalysis.org website and service</h4>
+    <p>The ArrayAnalysis.org website is unreachable. Results from analysis started shortly before the attack will be kept on the server.
+    </p>
   </div>
   <div class="rcolumn">
     <b>More info</b><br />
