--- a/index.html
+++ b/index.html
@@ -37,19 +37,22 @@
 
 <div class="row">
   <div class="lcolumn">
-    When you get this page, it bascially means you got redirected to this page because something is wrong. This page
-    is meant to give you further information and some pointers about the status of our services.
+    This page indicates you got redirected because something is not working. Please read the instructions and pointers
+    below about the status of our BiGCaT services.
     
     <h2>28 December 2019</h2>
     <p>
       Because of a <a href="https://www.maastrichtuniversity.nl/news/update-cyber-attack-um">security incident</a>
       at the Maastricht University, the network is isolated from the outside world
-      and several BiGCaT servers are offline. At the moment, we do not know the time line. You can follow
-      one or more of our Twitter accounts to receive updates.
+      and several BiGCaT servers are offline. At the moment, it is unclear when these services will be restored. 
+      You can follow one or more of our Twitter accounts to receive direct updates.
     </p>
     <h4>PathVisio.org</h4>
     <p>The PathVisio website is unreachable. Along with the data.pathvisio.org website hosting the BridgeDb identifier
-    mapping databases. For metabolites, Zenodo has <a href="https://figshare.com/articles/Metabolite_BridgeDb_ID_Mapping_Database_20191025_/10048508">an
+    mapping databases. 
+     For metabolite mappings, Figshare has <a href="https://doi.org/10.6084/m9.figshare.10048508">an
+    archived version of a recent mapping file</a>
+      For interactions mappings, Figshare has <a href="https://doi.org/10.6084/m9.figshare.8167565">an
     archived version of a recent mapping file</a>.
     </p>
     <h4>WikiPathways SPARQL endpoint</h4>
