--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
     <h4>WikiPathways website and data download</h4>
     <p>The <a href="https://www.wikipathways.org/index.php/WikiPathways"> WikiPathways website </a> is online and can be used. 
-      <a href="https://www.wikipathways.org/index.php/Download_Pathways> </a> Pathway data </a> can be downloaded as well .
+      <a href="https://www.wikipathways.org/index.php/Download_Pathways"> Pathway data </a> can be downloaded as well .
     </p>
     
     <h4>BridgeDb webservice</h4>
