More details on BridgeDb webservice data

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     
     <h4>BridgeDb webservice</h4>
     <p><a href="http://webservice.bridgedb.org/">The BridgeDb webservices </a> are online and can be used. 
-    However, the Swagger/OpenAPI interactive
-    documentation is not available.</a>
+      Data included are the latest Gene, Protein, Metabolite and Interaction mappings.
+    However, the Swagger/OpenAPI interactive documentation is not available.</a>
     </p>
     
     <h3>NOT Working services:</h3>
@@ -66,8 +66,9 @@
     <h4>PathVisio.org</h4>
     <p>The PathVisio website is unreachable, along with the data.pathvisio.org website hosting the BridgeDb identifier
     mapping databases. You can <a href="https://github.com/PathVisio/pathvisio/releases"> download </a> PathVisio from our Github release page. 
-    For <a href="https://doi.org/10.6084/m9.figshare.10048508"> metabolite mappings </a>, Figshare has an archived version of a recent mapping file</a>
+    For <a href="https://doi.org/10.6084/m9.figshare.10048508"> metabolite mappings </a>, Figshare has an archived version of a recent mapping file.
     This is also the case for <a href="https://doi.org/10.6084/m9.figshare.8167565"> interactions mappings</a> .
+    The BridgeDb webservice includes these latest files, as well as Gene+Protein mappings.
     </p>
     <h4>WikiPathways SPARQL endpoint</h4>
     <p>The WikiPathways SPARQL endpoint is also unreachable (<a href="https://www.wikipathways.org/">WikiPathways.org</a> is not affected). We currently do not have an alternative,
@@ -75,9 +76,10 @@
     and load this in a local Virtuoso or Blazegraph installation.</a>.
     </p>
     <h4>BridgeDb.org website</h4>
-    <p>The BridgeDb website unreachable. Along with the data.bridgedb.org website hosting the BridgeDb identifier
-    mapping databases. For metabolites, Zenodo has <a href="https://figshare.com/articles/Metabolite_BridgeDb_ID_Mapping_Database_20191025_/10048508">an
-    archived version of a recent mapping file</a>.
+    <p>The BridgeDb website is unreachable. Along with the data.bridgedb.org website hosting the BridgeDb identifier
+    mapping databases. For <a href="https://doi.org/10.6084/m9.figshare.10048508"> metabolite mappings </a>, Figshare has an archived version of a recent mapping file.
+    This is also the case for <a href="https://doi.org/10.6084/m9.figshare.8167565"> interactions mappings</a>. 
+    The BridgeDb webservice includes these latest files, as well as Gene+Protein mappings.
     </p>
     <h4>ArrayAnalysis.org website and service</h4>
     <p>The ArrayAnalysis.org website is unreachable. Results from analysis started shortly before the attack will be kept on the server.
