--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     The BridgeDb webservice includes these latest files, as well as Gene+Protein mappings.
     </p>
     <h4>WikiPathways SPARQL endpoint</h4>
-    <p>The WikiPathways SPARQL endpoint is available (<a href="http://sparql.wikipathways.org/">sparql.wikipathways.org</a> is not affected). This is a temporary solution, hosted by OpenRiskNet. For access through command line or coding environments, add '/sparql' to the URL. 
-    Also, the RDF data can still be downloaded at <a href="http://data.wikipathways.org/20191210/rdf/">data.wikipathways.org</a> and loaded in a local Virtuoso or Blazegraph installation.</a>.
+    <p>The WikiPathways SPARQL endpoint is available (<a href="http://sparql.wikipathways.org/">sparql.wikipathways.org</a>). This is a temporary solution, hosted by OpenRiskNet. For access through command line or coding environments, add '/sparql' to the URL. 
+    Also, the RDF data can still be downloaded at <a href="http://data.wikipathways.org/20191210/rdf/">data.wikipathways.org</a> and loaded in a local Virtuoso or Blazegraph installation.</a>
     </p>
     <h4>BridgeDb.org website</h4>
     <p>The BridgeDb website is unreachable. Along with the data.bridgedb.org website hosting the BridgeDb identifier
